src/main/resources/NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector: # Applicable to this pod
    matchLabels: #Ingress rules allows connections to all pods in the "default" namespace with the label "role=db" on TCP port 6379 from:
      role: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: myproject
    - podSelector: # Applicable from this pod to role:  poddb
        matchLabels:
          role: frontend #any pod in the "default" namespace with the label "role=frontend"
          # (Ingress rules) allows connections to all pods in the "default" namespace with the label "role=db" on TCP port 6379 
          # from
          # any pod in the "default" namespace with the label "role=frontend"
    ports:
    - protocol: TCP # Applied to role: db on port 6379
      port: 6379
  egress: # Applicable from this pod to role: db pod
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    ports:
    - protocol: TCP
      port: 5978
